--- a/researcher/templates/researcher/technique.html
+++ b/researcher/templates/researcher/technique.html
@@ -50,6 +50,14 @@
                                                 </span>
                                             </div>
                                         </div>
+                                        <div class="col-md-12 col-12 text-center">
+                                            <div class="label">لینک آموزشی</div>
+                                            <div class="value">
+                                                <span>
+                                                    {{tech.technique.tutorial_link}}
+                                                </span>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>          
                                 {% if tech.level %}
