researcher request cards

--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -4,10 +4,6 @@
 
 {% block title %}درخواست پژوهشگر{% endblock %}
 
-{% block header %}
-
-{% endblock %}
-
 {% block name %}{{ request.user.expertuser.expertform }}{% endblock %}
 
 {% block dialog %}
@@ -16,62 +12,93 @@
 
 {% block content %}
     <div class="row">
-        <div class="col-lg-12">
-            <div class="card info-card user-info text-right">
-                {% if applications %}
-                    {% for project in applications %}
-                    <div class="card-header">{{ project.project }}</div>
-                    <div class="div_project_id" id="{{project.id}}" hidden></div>
-                    <div class="inner-card card" style="margin-bottom: 0;">
-                        {% for researcher in project.researchers_applied %}
-                            <div class="researcher-request-info-innerDiv">
+        <div class="col-12 text-right">
+            <h3 class="h3 p-top-15 border-bottom">درخواست پژوهشگر</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 text-right">
+            {% if applications %}
+                {% for project in applications %}
+                    {% for researcher in project.researchers_applied %}
+                        <div class="card box flow-root-display no-border has-image w-100">
+                            <div class="box-image">
+                                <img src="{{ researcher.profile.photo.url }}" alt="researcher-profile-image">
+                            </div>
+                            <div class="box-header">
+                                <h5>
+                                    {{ researcher.profile }}
+                                </h5>
+                                <div class="project-techniques">
+                                    <ul class="mix-list hover">
+                                        {% for tech in researcher.techniques %}
+                                            <li>{{ tech }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="box-body">
                                 <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="card researcher-info">
-                                            <img src="{{ researcher.profile.photo.url }}" alt="researcher-profile">
-                                            <div class="researcher-info-innerDiv text-right">
-                                                <h6>{{ researcher.profile }}</h6>
-                                                <div>{{ researcher.profile.major }} - {{ researcher.profile.university }}</div>
-                                                <div>مقطع: <span> {% if researcher.profile.grade == 1 %}
-                                                                    کارشناسی
-                                                                {% elif researcher.profile.grade == 2 %}
-                                                                    کارشناسی ارشد
-                                                                {% elif researcher.profile.grade == 3 %}
-                                                                    دکتری
-                                                                {% elif researcher.profile.grade == 4 %}
-                                                                    دکتری عمومی
-                                                                {% endif %}</span></div>
-                                                <div class="">
-                                                {% for tech in researcher.techniques %}
-                                                    <span class="border-span">{{tech}}</span>
-                                                {% endfor %}
-                                                </div>
+                                    <div class="col-md-9">
+                                        <div class="box-item-list">
+                                            <div class="researcher-field">
+                                                <span class="label">
+                                                    <i class="fas fa-sticky-note"></i>
+                                                </span>
+                                                <span class="value">
+                                                    {{ researcher.profile.major }}
+                                                </span>
                                             </div>
-                                            <div class="researcher-score">
-                                                <span>امتیاز: </span>
-                                                <span>10/</span>
-                                                <span>{{researcher.profile.researcher_user.points}}</span>
+                                            <div class="researcher-rank">
+                                                <span class="label">
+                                                    <i class="fas fa-graduation-cap"></i>
+                                                </span>
+                                                <span class="value">
+                                                    {% if researcher.profile.grade == 1 %}
+                                                        کارشناسی
+                                                    {% elif researcher.profile.grade == 2 %}
+                                                        کارشناسی ارشد
+                                                    {% elif researcher.profile.grade == 3 %}
+                                                        دکتری
+                                                    {% elif researcher.profile.grade == 4 %}
+                                                        دکتری عمومی
+                                                    {% endif %}
+                                                </span>
                                             </div>
-    {#                                                   <button class="show-researcher">مشاهده</button>#}
-    {#                                                   <button class="accept-researcher">تایید</button>#}
-    {#                                                   <button class="refuse-researcher">رد</button>#}
-                                            <button class="researcher-card-button-show"  value="{{project.id}}" id="{{ researcher.profile.id }}" data-url="{% url 'expert:show_researcher_preview' %}">مشاهده</button>
-                                            <button class="researcher-card-button-check confirm-researcher" id="{{ researcher.profile.id }}">تایید</button>
-                                            <div class="close"></div>
+                                            <div class="researcher-uni">
+                                                <span class="label">
+                                                    <i class="fas fa-university"></i>
+                                                </span>
+                                                <span class="value">
+                                                    {{ researcher.profile.university }}
+                                                </span>
+                                            </div>
                                         </div>
+                                        <div class="box-score">
+                                            <span class="score-amount">{{ researcher.profile.researcher_user.points }}</span>
+
+                                            <span class="circle"></span>
+                                            <span class="circle"></span>
+                                            <span class="circle"></span>
+                                            <span class="circle"></span>
+                                            <span class="circle"></span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <button class="default-btn" value="{{ project.id }}"
+                                                id="{{ researcher.profile.id }}"
+                                                data-url="{% url 'expert:show_researcher_preview' %}">مشاهده
+                                        </button>
+                                        <button class="default-btn confirm-researcher"
+                                                id="{{ researcher.profile.id }}">تایید
+                                        </button>
                                     </div>
                                 </div>
                             </div>
-                            <hr>
-                        {% endfor %}
-                    </div>
+                        </div>
                     {% endfor %}
-                {% endif %}
-            </div>
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
-{% endblock %}
-
-{% block script %}
-
 {% endblock %}
