debug-industry =>  show resume modal

--- a/industry/templates/industry/layouts/expertResume.html
+++ b/industry/templates/industry/layouts/expertResume.html
@@ -1,13 +1,13 @@
 {% load static %}
 <div class="fixed-back expert-resume">
-    <div class="card small-card text-right">
+    <div class="card text-right">
         <div class="close"></div>
         <div class="card-head">نام استاد</div>
-        <div class="container">
+        <div class="container m-top-10">
             <div class="row">
                 <div class="col-lg-12 text-right">
                     <span class="section-title">سوابق علمی</span>
-                    <div class="section">
+                    <div class="section no-border">
                         <table class='table'>
                             <thead>
                             <tr>
@@ -27,7 +27,7 @@
             <div class="row">
                 <div class="col-lg-12 text-right">
                     <span class="section-title">سوابق اجرایی</span>
-                    <div class="section">
+                    <div class="section no-border">
                         <table class='table'>
                             <thead>
                             <tr>
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col-lg-12 text-right">
                     <span class="section-title">سوابق پژوهشی</span>
-                    <div class="section">
+                    <div class="section no-border">
                         <table class='table'>
                             <thead>
                             <tr>
@@ -65,7 +65,7 @@
             <div class="row">
                 <div class="col-lg-12 text-right">
                     <span class="section-title">مقالات</span>
-                    <div class="section">
+                    <div class="section no-border">
                         <table class='table'>
                             <thead>
                             <tr>
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-lg-12 text-right">
                     <span class="section-title">افتخارات</span>
-                    <div class="section awards">
+                    <div class="section no-border awards">
                         <ul class="win-ul">
                             <li>افتخارات</li>
                             <li>افتخارات</li>
@@ -96,7 +96,7 @@
             <div class="row">
                 <div class="col-lg-12 text-right">
                     <span class="section-title">سایر موارد</span>
-                    <div class="section">
+                    <div class="section no-border">
                         <ul class="tick-ul">
                             <li>
                                 <div class="researcher-num text-right">
