--- a/expert/templates/expert/layouts/comment.html
+++ b/expert/templates/expert/layouts/comment.html
@@ -2,6 +2,13 @@
 <span class="section-title">نظرات</span>
 <div class="section">
     <div class="project-comment-innerDiv">
+        <div class="no-comment">
+            <img class="no comment" src="{% static 'img/no_message.svg' %}" alt="no message">
+            <h5>نظری درباره این پروژه ثبت نشده!</h5>
+            <p>
+                در صورتی که درباره پروژه سوال یا ابهامی دارید می توانید در این قسمت آن را مطرح کنید.
+            </p>
+        </div>
         <div class="comments"></div>
         <div class="add-comment">
             <form action="" method="POST" enctype="multipart/form-data" id="comment_form">
