--- a/expert/templates/expert/researcherRequest.html
+++ b/expert/templates/expert/researcherRequest.html
@@ -17,11 +17,11 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 text-right">
-            {% if applications %}
-                {% for project in applications %}
-                    {% for researcher in project.researchers_applied %}
-                        <div class="card box flow-root-display no-border has-image w-100">
+        {% if applications %}
+            {% for project in applications %}
+                {% for researcher in project.researchers_applied %}
+                    <div class="col-lg-4 col-md-6 col-12">
+                        <div class="card third-width box flow-root-display no-border has-image w-100 text-right">
                             <div class="box-image">
                                 <img src="{{ researcher.profile.photo.url }}" alt="researcher-profile-image">
                             </div>
@@ -29,76 +29,85 @@
                                 <h5>
                                     {{ researcher.profile }}
                                 </h5>
-                                <div class="project-techniques">
-                                    <ul class="mix-list hover">
-                                        {% for tech in researcher.techniques %}
-                                            <li>{{ tech }}</li>
-                                        {% endfor %}
-                                    </ul>
+                                <div class="box-score">
+                                    <span class="score-amount">{{ researcher.profile.researcher_user.points }}/10</span>
+                                    <img src="{% static 'img/signs.svg' %}" alt="star">
                                 </div>
                             </div>
                             <div class="box-body">
                                 <div class="row">
-                                    <div class="col-md-9">
+                                    <div class="col-12">
                                         <div class="box-item-list">
-                                            <div class="researcher-field">
-                                                <span class="label">
-                                                    <i class="fas fa-sticky-note"></i>
-                                                </span>
-                                                <span class="value">
-                                                    {{ researcher.profile.major }}
-                                                </span>
-                                            </div>
-                                            <div class="researcher-rank">
-                                                <span class="label">
-                                                    <i class="fas fa-graduation-cap"></i>
-                                                </span>
-                                                <span class="value">
-                                                    {% if researcher.profile.grade == 1 %}
-                                                        کارشناسی
-                                                    {% elif researcher.profile.grade == 2 %}
-                                                        کارشناسی ارشد
-                                                    {% elif researcher.profile.grade == 3 %}
-                                                        دکتری
-                                                    {% elif researcher.profile.grade == 4 %}
-                                                        دکتری عمومی
-                                                    {% endif %}
-                                                </span>
-                                            </div>
                                             <div class="researcher-uni">
                                                 <span class="label">
-                                                    <i class="fas fa-university"></i>
+                                                    دانشگاه
                                                 </span>
                                                 <span class="value">
                                                     {{ researcher.profile.university }}
                                                 </span>
                                             </div>
-                                        </div>
-                                        <div class="box-score">
-                                            <span class="score-amount">{{ researcher.profile.researcher_user.points }}</span>
-
-                                            <span class="circle"></span>
-                                            <span class="circle"></span>
-                                            <span class="circle"></span>
-                                            <span class="circle"></span>
-                                            <span class="circle"></span>
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    <div class="researcher-field">
+                                                <span class="label">
+                                                    رشته
+                                                </span>
+                                                        <span class="value">
+                                                    {{ researcher.profile.major }}
+                                                </span>
+                                                    </div>
+                                                </div>
+                                                <div class="col-6">
+                                                    <div class="researcher-rank">
+                                                        <span class="label">
+                                                    مقطع
+                                                        </span>
+                                                        <span class="value">
+                                                            {% if researcher.profile.grade == 1 %}
+                                                                کارشناسی
+                                                            {% elif researcher.profile.grade == 2 %}
+                                                                کارشناسی ارشد
+                                                            {% elif researcher.profile.grade == 3 %}
+                                                                دکتری
+                                                            {% elif researcher.profile.grade == 4 %}
+                                                                دکتری عمومی
+                                                            {% endif %}
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="col-md-3">
-                                        <button class="default-btn" value="{{ project.id }}"
+                                </div>
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="project-techniques">
+                                            <ul class="mix-list hover">
+                                                {% for tech in researcher.techniques %}
+                                                    <li>{{ tech }}</li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-6 text-left">
+                                        <button class="default-btn researcher-card-button-show" value="{{ project.id }}"
                                                 id="{{ researcher.profile.id }}"
                                                 data-url="{% url 'expert:show_researcher_preview' %}">مشاهده
                                         </button>
-                                        <button class="default-btn confirm-researcher"
+                                    </div>
+                                    <div class="col-6 text-right">
+                                        <button class="border-button confirm-researcher"
                                                 id="{{ researcher.profile.id }}">تایید
                                         </button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    {% endfor %}
+                    </div>
                 {% endfor %}
-            {% endif %}
-        </div>
+            {% endfor %}
+        {% endif %}
     </div>
 {% endblock %}
