debug Researcher Requested Page

--- a/expert/templates/expert/layouts/researcher_info_dialog.html
+++ b/expert/templates/expert/layouts/researcher_info_dialog.html
@@ -1,5 +1,5 @@
 {% load static%}
-<div class="dialog-main researcher-info-dialog">
+<div class="dialog-main fixed-back researcher-info-dialog">
     <div class="card text-right dialog">
         <div class="close"></div>
         <div class="container">
